// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/git-submodules/artifact updateArtifacts() returns empty content 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "",
      "path": "",
      "type": "addition",
    },
  },
]
`;

exports[`modules/manager/git-submodules/artifact updateArtifacts() returns two modules 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "",
      "path": "renovate",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "",
      "path": "renovate-pro",
      "type": "addition",
    },
  },
]
`;
